--- a/My_Project/quickNotes.ipynb
+++ b/My_Project/quickNotes.ipynb
@@ -13,6 +13,42 @@
     "\n",
     "Sqlalchemy models on the other hand are used so that we can access ORM."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b37d4de2",
+   "metadata": {},
+   "source": [
+    "Reponse Model: Show only necessary fields to user\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9407e168",
+   "metadata": {},
+   "source": [
+    "\n",
+    "HTTP Status Code: \n",
+    "from fastapi import status\n",
+    "\n",
+    "1XX : Informational  \n",
+    "2XX : Sucess  \n",
+    "3XX : Redirectional  \n",
+    "4XX : Client Error  \n",
+    "5XX : Server Error   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab1d81f8",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
